--- a/frontend/src/container/AlertHistory/Statistics/statistics.styles.scss
+++ b/frontend/src/container/AlertHistory/Statistics/statistics.styles.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
+	height: 280px;
 	border: 1px solid var(--bg-slate-500);
 	border-radius: 4px;
 }
